added link to style.css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>My Note</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <heading>
@@ -9,7 +10,7 @@
         </heading>
         <section id="container">
             <div id="note" contenteditable="true"></div>
-            
+
         </section>
     </body>
 </html>
